--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.8.1
+bcrypt==4.3.0
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
 cryptography==45.0.3
 defusedxml==0.7.1
 Django==5.2.2
+django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 djoser==2.3.1
